@@ -1,5 +1,8 @@
 * What is new in gsl-1.16:
 
+** gsl_sf_coupling_3j now handles the special case (ja jb jc; 0 0 0)=0
+   when ja+jb+jc is odd
+
 ** Fixed gsl_sf_mathieu_se_array to return zero when the order is zero
    [bug #33679].
 
